Completed final StateChange function. Squashed a bug in the renderDraw function. Updated the active player's hand to not appear on game initialization - default CSS styling.

--- a/styles/main.css
+++ b/styles/main.css
@@ -99,7 +99,7 @@
 #activePlayerHand {
     border: 2px solid hotpink;
     grid-area: 2 / 2 / 3 / 3;
-    display: flex;
+    display: none;
     justify-content: center;
     align-items: center;
 }
